fix(gui): dynamic preview